# eezo

./: .gitignore  .gitmodules  Cargo.toml  T78_3_SUMMARY.md  T78_4_SUMMARY.md  T78_8_SUMMARY.md  batch.json  deny.toml  devnet.env  devnet.env.bak  devnet_tps.env  genesis.json  genesis.min.json  high_tps_devnet.env  log.txt  mainnet.env  proof  prover_output_h32.json  server.csr.cnf  testnet.env  validate_t78_4.sh
backup/consensus-dag/: Cargo.toml
backup/consensus-dag/src/: da_worker.rs  executor_shim.rs  lib.rs  order.rs  store.rs
crates/crypto/: Cargo.toml  build.rs
crates/crypto/examples/: print_mlkem_pk.rs
crates/crypto/src/: ct.rs  error.rs  hash.rs  lib.rs  metrics.rs  suite.rs
crates/crypto/tests/: hash_ct.rs  mldsa_roundtrip.rs  registry_dispatch.rs  slhdsa_smoke.rs  smoke.rs  t40_registry_tests.rs
crates/eezo-cuda-hash/: Cargo.toml  README.md  build.rs
crates/eezo-cuda-hash/src/: lib.rs
crates/eezo-prover/: Cargo.toml
crates/eezo-prover/src/: air_spec.rs  constraints.rs  domain.rs  field.rs  fri.rs  gpu_hash.rs  hash_b3.rs  hash_b3_tx.rs  lib.rs  merkle.rs  metrics.rs  pi_builder.rs  pi_canonical.rs  poly.rs  proof.rs  proof_encoding.rs  proof_writer.rs  prover_loop.rs  stark_snark_prep.rs  trace.rs  v1_mldsa.rs  verify.rs  witness.rs
crates/eezo-prover/tests/: air_b3_state_test.rs  air_b3_txs_constraints_test.rs  air_b3_txs_test.rs  air_spec_test.rs  air_trace_test.rs  air_txs_sequence_test.rs  fri_smoke_test.rs  hash_b3_round_test.rs  merkle_test.rs  pi_canonical_test.rs  stark_end_to_end_test.rs  stark_prover_verifier_test.rs
crates/eezo-snark/: Cargo.toml
crates/eezo-snark/src/: circuit.rs  lib.rs  prove.rs  public.rs  transcript.rs  verify.rs
crates/eezo-snark/tests/: plonk_crs_consistency_test.rs  plonk_prove_verify_test.rs  plonk_tamper_digest_test.rs  snark_plonk_digest_consistency_test.rs  snark_plonk_roundtrip_test.rs  snark_plonk_tamper_test.rs
crates/eezo-ssz-bridge/: Cargo.toml
crates/eezo-ssz-bridge/src/: lib.rs
crates/ledger/: Cargo.toml
crates/ledger/benches/: consensus_verify.rs
crates/ledger/src/: accounts.rs  address.rs  block.rs  bootstrap.rs  bridge.rs  cert_store.rs  checkpoints.rs  config.rs  consensus.rs  consensus_api.rs  consensus_msg.rs  consensus_sig.rs  dev_unsafe.rs  eth_ssz.rs  evidence.rs  genesis.rs  lib.rs  light.rs  mempool.rs  merkle.rs  metrics.rs  metrics_shim.rs  persistence.rs  pq44_runtime.rs  qc_sidecar.rs  rotation.rs  state_sync.rs  stm_arena.rs  supply.rs  tx.rs  tx_sig.rs  tx_types.rs  verify_cache.rs
crates/ledger/tests/: block_assemble.rs  block_validate_apply.rs  bridge_header_json.rs  bridge_mint.rs  bridge_proofs.rs  cert_window.rs  checkpoints_attach.rs  checkpoints_attach_verify.rs  checkpoints_cfg.rs  checkpoints_persist.rs  checkpoints_smoke.rs  checkpoints_stub.rs  checkpoints_verify.rs  consensus_single.rs  consensus_tx_props.rs  cp_block_determinism.rs  cp_checkpoints_safety.rs  cp_fee_ordering.rs  cp_nonce_integrity.rs  cp_persistence_recovery.rs  cp_replay_after_restart.rs  cp_sig_auth.rs  cp_supply_conservation.rs  delta_v2_ssz.rs  domain_sep.rs  double_sign.rs  genesis_smoke.rs  header_preflight.rs  helpers.rs  invariants_nonce.rs  invariants_supply.rs  invariants_txroot.proptest-regressions  invariants_txroot.rs  invariants_txroot_prop.proptest-regressions  invariants_txroot_prop.rs  light_verify.rs  mempool_admit.rs  mempool_fee_ordering_prop.proptest-regressions  mempool_fee_ordering_prop.rs  mempool_limits.rs  (+24 more)
crates/net/: Cargo.toml
crates/net/examples/: kemtls_server.rs
crates/net/src/: cert.rs  consensus_wire.rs  handshake.rs  harness.rs  hkdf_sha3.rs  kem_adapter.rs  kemtls.rs  keyschedule.rs  lib.rs  metrics.rs  replay.rs  secure.rs  session.rs  sig_adapter.rs  sim.rs  tickets.rs
crates/net/tests/: cert_verify.rs  consensus_sim.rs  consensus_sim_happy.rs  consensus_wire_async.rs  handshake.rs  handshake_auth.rs  handshake_mlkem.rs  handshake_mutual.rs  handshake_resume.rs  handshake_ticket_rotation.rs  secure_async.rs  secure_async_auth.rs  sim_basics.rs
crates/node/: Cargo.toml
crates/node/data_test_33413/: IDENTITY
crates/node/data_test_36161/: NODE_ID
crates/node/data_test_38281/: NODE_ID
crates/node/log/: log.txt  log2.txt
crates/node/src/: accounts.rs  adaptive_agg.rs  addr.rs  block_pipeline.rs  bridge.rs  consensus_runner.rs  cuda_hash.rs  dag_consensus_runner.rs  dag_ordering.rs  dag_primary_health.rs  dag_runner.rs  gpu_hash.rs  incremental_state.rs  lib.rs  main.rs  mempool.rs  mempool_actor.rs  metrics.rs  peers.rs  persistence_worker.rs  shadow_hotstuff.rs  sigpool.rs  state_sync.rs  tx_decode_pool.rs
crates/node/t29_8-404-client/: IDENTITY  NODE_ID
crates/node/t29_8-404-server/: NODE_ID
crates/node/t29_8-retry-client/: IDENTITY
crates/node/t29_8-retry-server/: NODE_ID
crates/node/t29_8-watchdog-client/: NODE_ID
crates/node/t29_9-cli-allow/: NODE_ID
crates/node/t29_9-cli-badsig/: IDENTITY
crates/node/t29_9-cli-require/: NODE_ID
crates/node/t29_9-srv-badsig/: IDENTITY
crates/node/t29_9-srv-unsigned/: NODE_ID
crates/node/t29_9-srv-unsigned-2/: NODE_ID
crates/node/test-ops-client/: NODE_ID
crates/node/test-ops-client-captured/: IDENTITY
crates/node/test-ops-server/: NODE_ID
crates/node/tests/: auto_admin_peers.rs  auto_admin_runtime.rs  auto_cluster_health.rs  auto_cluster_quorum.rs  auto_config_endpoint.rs  auto_operator_flags.rs  auto_peer_ping_metrics.rs  auto_peer_reload.rs  auto_peer_reload_file.rs  auto_readiness_flip.rs  auto_state_sync_bootstrap.rs  auto_state_sync_client.rs  auto_state_sync_delta.rs  auto_state_sync_http_neg.rs  auto_state_sync_resume.rs  bridge_mint_smoke.rs  cli_listen.rs  common.rs  config_endpoint.rs  config_file.rs  config_file_env_fallback.rs  config_file_invalid.rs  config_invalid_chain_id.rs  (+30 more)
crates/serde/: Cargo.toml
crates/wallet/: Cargo.toml
eezo-relay/: Cargo.toml
eezo-relay/src/: checkpoint.rs  main.rs  snark.rs
fuzz/: Cargo.toml
fuzz/dictionaries/: eth_tx_decode.dict
fuzz/fuzz_targets/: eth_header_only.rs  eth_signedtx_only.rs  eth_tx_decode.rs  tx_decode.rs
(+230 files in other folders)
