[package]
name = "eezo-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
eezo-crypto = { path = "../crypto" }
eezo-kats   = { path = "../eezo-kats" }
eezo-ssz-bridge = { path = "../eezo-ssz-bridge" }
alloy-sol-types = { version = "0.7", default-features = false, features = ["std"] }
alloy-primitives = { version = "0.7", default-features = false, features = ["std"] }
# --- T37.4: automatic prover loop + metrics HTTP server ---
# async http client used by pi_builder.rs
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# async runtime for prover_loop and metrics server
tokio   = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] } # <-- ADD "fs"
# logging (used across binary + loop)
log = "0.4"
env_logger = "0.11"
# prometheus exporter for /metrics
prometheus = "0.13"
axum = "0.7"
lazy_static = "1.4"
rand = "0.8"

[features]
 stark-air = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "eezo-prover"
path = "bin/eezo-prover.rs"

