[package]
name = "eezo-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
# Keep minimal defaults; opt-in per build/test.
default = ["pq44-runtime", "checkpoints"]

# T77.SAFE-2: Dev-unsafe mode gate. Must be explicitly enabled to allow:
# - skip-sig-verify feature  
# - EEZO_DEV_ALLOW_UNSIGNED_TX environment variable
# NEVER use in production, testnet, or mainnet builds.
dev-unsafe = ["eezo-crypto/dev-unsafe"]

# T78.8: Devnet-safe build profile marker.
# This feature is used for build profile detection in dev_unsafe.rs.
# It does not enable any additional functionality but allows the crate
# to detect if it was built as part of a devnet-safe profile.
devnet-safe = []

# Public features used in code and/or tests
# T77.SAFE-2: skip-sig-verify now requires dev-unsafe
skip-sig-verify = ["dev-unsafe", "eezo-crypto/skip-sig-verify"]
serde = []
dev-tools = []

# Rayon parallelism (optional)
rayon = ["dep:rayon"]

# Runtime PQ bundle; enables ML-DSA-44 path via eezo-crypto
pq44-runtime = ["dep:pqcrypto-mldsa", "dep:pqcrypto-traits", "mldsa"]

metrics = ["dep:prometheus", "dep:once_cell"]
mempool-batch-verify = []
consensus-tests = []

# Storage/persistence
persistence = ["dep:rocksdb"]

# Checkpoints JSON helpers
checkpoints = ["dep:serde_json"]
# QC verification hooked to checkpoints
checkpoints-verify = ["checkpoints"]

# State Sync (anchors + snapshot + SMT verify), pulls base64
state-sync = ["persistence", "checkpoints", "dep:base64"]

# Forward crypto features to eezo-crypto
slh-dsa  = ["eezo-crypto/slh-dsa"]
mldsa    = ["eezo-crypto/mldsa"]
mlkem    = ["eezo-crypto/mlkem"]
ml-suite = ["mldsa", "mlkem"]

# Forward to eezo-serde
eth-ssz = ["eezo-serde/eth-ssz"]

# Optional guard used in a test cfg, define no-op to silence unexpected cfg
pq_sphincs = []
external_pqcrypto = []

# Test-only helpers (property/integration tests that rely on internal APIs)
testing = []

# Optional enforcement flag
qc-sidecar-v2-enforce = []

[dependencies]
# Don’t pull crypto defaults; select schemes via features above
eezo-crypto = { path = "../crypto", version = "0.1.0", default-features = false }
eezo-serde  = { path = "../serde",  version = "0.1.0" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
# IMPORTANT: enable default features so Engine::encode/decode are available
base64 = { version = "0.21", optional = true }
bincode = "1"
bitvec = { version = "1", features = ["serde"] }
sha3 = "0.10"
zstd = "0.13"
thiserror = "1"
lru = "0.12"
parking_lot = "0.12"
primitive-types = "0.12"
log = "0.4"
anyhow = "1"
blake3 = "1"

# RocksDB only when `persistence` is enabled
rocksdb = { version = "0.21", default-features = false, features = ["lz4"], optional = true }

# feature-gated deps
rayon        = { version = "1.11", optional = true }
once_cell    = { version = "1",    optional = true }
prometheus   = { version = "0.13", optional = true }

# PQ stack for runtime/tests
pqcrypto-mldsa  = { version = "0.1.2", optional = true, package = "pqcrypto-mldsa" }
pqcrypto-traits = { version = "0.3.5", optional = true, package = "pqcrypto-traits" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"
rand      = { version = "0.8", features = ["std", "std_rng"] }
zeroize   = { version = "1", features = ["derive"] }
tempfile  = "3"
serde_json = "1"
# Tests that import pqcrypto crates directly
pqcrypto-mldsa  = { version = "0.1.2", package = "pqcrypto-mldsa" }
pqcrypto-traits = { version = "0.3.5", package = "pqcrypto-traits" }

[[bench]]
name = "consensus_verify"
harness = false

[[bin]]
name = "eezo-ledger"
path = "src/bin/eezo-ledger.rs"
required-features = ["persistence", "checkpoints", "state-sync"]

# ---------------------------------
# Gate integration tests by features
# ---------------------------------

# Consensus / mempool / signing paths
[[test]]
name = "block_validate_apply"
path = "tests/block_validate_apply.rs"
required-features = ["pq44-runtime"]

[[test]]
name = "double_sign"
path = "tests/double_sign.rs"
required-features = ["pq44-runtime"]

[[test]]
name = "mempool_admit"
path = "tests/mempool_admit.rs"
required-features = ["pq44-runtime"]

[[test]]
name = "mempool_prop"
path = "tests/mempool_prop.rs"
required-features = ["pq44-runtime"]

[[test]]
name = "header_preflight"
path = "tests/header_preflight.rs"
required-features = ["pq44-runtime"]

[[test]]
name = "mempool_limits"
path = "tests/mempool_limits.rs"
required-features = ["pq44-runtime"]

# Support helpers (test-only utilities referencing pqcrypto)
[[test]]
name = "helpers"
path = "tests/helpers.rs"
required-features = ["pq44-runtime"]

# Checkpoint JSON/bridge header
[[test]]
name = "bridge_header_json"
path = "tests/bridge_header_json.rs"
required-features = ["pq44-runtime", "checkpoints"]

# Checkpoint safety/auth/supply
[[test]]
name = "cp_checkpoints_safety"
path = "tests/cp_checkpoints_safety.rs"
required-features = ["pq44-runtime", "checkpoints"]

[[test]]
name = "cp_sig_auth"
path = "tests/cp_sig_auth.rs"
required-features = ["pq44-runtime", "checkpoints"]

[[test]]
name = "cp_supply_conservation"
path = "tests/cp_supply_conservation.rs"
required-features = ["pq44-runtime", "checkpoints"]

[[test]]
name = "checkpoints_smoke"
path = "tests/checkpoints_smoke.rs"
required-features = ["pq44-runtime", "checkpoints"]

# Persistence + checkpoints (heavier)
[[test]]
name = "persistence_blocks"
path = "tests/persistence_blocks.rs"
required-features = ["pq44-runtime", "persistence", "checkpoints"]

# Property tests that rely on non-public helpers
[[test]]
name = "invariants_txroot_prop"
path = "tests/invariants_txroot_prop.rs"
required-features = ["pq44-runtime", "testing"]

[[test]]
name = "nonce_integrity_prop"
path = "tests/nonce_integrity_prop.rs"
required-features = ["pq44-runtime", "testing"]

# Genesis config smoke (requires extra fields / internal wiring)
[[test]]
name = "genesis_smoke"
path = "tests/genesis_smoke.rs"
required-features = ["pq44-runtime", "consensus-tests"]

# T77.SAFE-2: Tests that use unsigned transactions must explicitly enable dev-unsafe
[[test]]
name = "block_assemble"
path = "tests/block_assemble.rs"
required-features = ["pq44-runtime", "dev-unsafe"]

[[test]]
name = "bridge_mint"
path = "tests/bridge_mint.rs"
required-features = ["pq44-runtime", "dev-unsafe"]