[package]
name = "eezo-net"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["mlkem"]
pq44-runtime = ["eezo-ledger/pq44-runtime", "eezo-crypto/pq44-runtime"]
t16-sim = []
# forward the KEM feature to crypto so examples/tests can use MlKem768
mlkem = ["eezo-crypto/mlkem"]
# metrics module depends only on prometheus
metrics = ["dep:prometheus"]
# T37.1: feature gate for resumption (used by node/relay; no extra deps here)
kemtls-resume = []
# T42: SSZ feature for consensus
eth-ssz = ["eezo-ledger/eth-ssz"]
# T41: Checkpoints feature
checkpoints = ["eezo-ledger/checkpoints"]

[dependencies]
eezo-crypto = { path = "../crypto", default-features = false }
eezo-ledger  = { path = "../ledger", default-features = false }
aead = "0.5"
chacha20poly1305 = "0.10"
hmac = "0.12"
sha3 = "0.10"
rand = { version = "0.8", features = ["std"] }
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
bincode = "1.3"
# IMPORTANT for examples: enable "net" so tokio::net::TcpListener is available
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net"] }
bytes = "1"
pqcrypto-traits = "0.3"
pqcrypto-mldsa = "0.1"
lru = "0.12"
pqcrypto-mlkem = "0.1"
prometheus = { version = "0.13", optional = true }
# once_cell is used unconditionally in sig_adapter.rs and handshake.rs
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util"] }
