[package]
name = "eezo-node"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prometheus = "0.13"
once_cell = "1"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
toml = "0.8"

[dependencies.eezo-ledger]
path = "../ledger"
features = ["persistence"]
default-features = false

[features]
metrics = ["eezo-ledger/metrics"]
pq44-runtime = ["eezo-ledger/pq44-runtime"]
checkpoints = ["eezo-ledger/checkpoints"]

[dev-dependencies]
eezo-crypto = { path = "../crypto", default-features = false, features = ["mlkem","mldsa","slh-dsa"] }
eezo-ledger = { path = "../ledger", default-features = false, features = ["pq44-runtime","slh-dsa","mldsa"] }
eezo-net    = { path = "../net",    default-features = false, features = ["pq44-runtime","mlkem"] }

pqcrypto-mldsa  = "0.1"
pqcrypto-traits = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking","json","rustls-tls"] }

# Explicit binary target for tests to find CARGO_BIN_EXE_eezo-node
[[bin]]
name = "eezo-node"
path = "src/main.rs"
