# crates/node/Cargo.toml
[package]
name = "eezo-node"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Element Zero <dev@elementzero.io>"]
description = "Element Zero node binary and services — combines ledger, network, and wallet layers."
repository = "https://github.com/elementzero-labs/eezo"
readme = "README.md"
categories = ["cryptography", "blockchain", "networking"]
keywords = ["eezo", "node", "pqc", "blockchain", "hotstuff"]

[[bin]]
name = "eezo-node"
path = "src/main.rs"

[dependencies]
# Internal EEZO crates
eezo-crypto = { path = "../crypto", default-features = false, features = ["mldsa", "mlkem"] }
eezo-ledger = { path = "../ledger", default-features = false }   # features forwarded below
# ✅ align with relay: force mlkem + kemtls-resume, disable defaults
eezo-net    = { path = "../net", default-features = false, features = ["mlkem", "kemtls-resume"] }
eezo-wallet = { path = "../wallet", features = ["pq44-runtime"] }
eezo-serde  = { path = "../serde" }

# Core libs
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal"] }
axum = { version = "0.7", features = ["macros", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
parking_lot = "0.12"
once_cell = "1.19"
bytes = "1.6"
hex = "0.4"
rand = "0.8"
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
chrono = "0.4"
url = "2.5"

# Metrics / logging
prometheus = "0.13"
lazy_static = "1.5"
log = "0.4"
env_logger = "0.11"

# Crypto / hashing
chacha20poly1305 = "0.10"
base64 = "0.21"
uuid = { version = "1", features = ["v4"] }
seahash = "4"
blake3 = "1"

# HTTP clients
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
ureq = { version = "2.9", features = ["json", "tls"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# PQC dependency required for T36.2 runner startup (ML-DSA-44 keypair)
pqcrypto-mldsa = "0.1.2"

[features]
# Ship sensible defaults so header fields exist and observability works
default = ["pq44-runtime", "metrics", "eth-ssz", "checkpoints"]

# Forward ML-KEM to deps
mlkem = ["eezo-net/mlkem", "eezo-crypto/mlkem"]

# Forward PQ runtime features
pq44-runtime = [
  "eezo-crypto/pq44-runtime",
  "eezo-ledger/pq44-runtime",
]
slh-dsa = ["eezo-crypto/slh-dsa"]

# Observability / checkpoints / persistence / state-sync
metrics = ["eezo-ledger/metrics", "eezo-net/metrics"]
checkpoints = ["eezo-ledger/checkpoints"]
checkpoints-verify = ["eezo-ledger/checkpoints-verify"]
persistence = ["eezo-ledger/persistence"]
state-sync = ["eezo-ledger/state-sync"]

# ETH-SSZ v2 roots
eth-ssz = ["eezo-ledger/eth-ssz", "eezo-serde/eth-ssz"]

# Runtime modes
devnet = ["metrics", "pq44-runtime", "kemtls-resume", "mlkem"]
testing = ["pq44-runtime"]

# HTTP surface for state-sync endpoints
state-sync-http = []

# Dev-only toggles
dev-tools = []

# Keep adapter/testing cfgs “known”
consensus-core-adapter = []
consensus-core-testing = []

# T37.1: enable KEMTLS resumption paths in node
kemtls-resume = ["eezo-net/kemtls-resume"]

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
