# crates/node/Cargo.toml
[package]
name = "eezo-node"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Element Zero <dev@elementzero.io>"]
description = "Element Zero node binary and services — combines ledger, network, and wallet layers."
repository = "https://github.com/elementzero-labs/eezo"
readme = "README.md"
categories = ["cryptography", "blockchain", "networking"]
keywords = ["eezo", "node", "pqc", "blockchain", "hotstuff"]

[[bin]]
name = "eezo-node"
path = "src/main.rs"

[dependencies]
# Internal EEZO crates
eezo-crypto = { path = "../crypto", default-features = false, features = ["mldsa", "mlkem"] }
eezo-ledger = { path = "../ledger", default-features = false }   # features forwarded below
# ✅ align with relay: force mlkem + kemtls-resume, disable defaults
eezo-net    = { path = "../net", default-features = false, features = ["mlkem", "kemtls-resume"] }
eezo-wallet = { path = "../wallet", features = ["pq44-runtime"] }
eezo-serde  = { path = "../serde" }
# T71.0: GPU hashing adapter (optional, disabled by default)
eezo-prover = { path = "../eezo-prover", default-features = false, optional = true }
# T75.0: DAG consensus shadow mode (optional, disabled by default)
consensus-dag = { path = "../consensus-dag", optional = true }

# Core libs
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal"] }
axum = { version = "0.7", features = ["macros", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
parking_lot = "0.12"
once_cell = "1.19"
bytes = "1.6"
hex = "0.4"
rand = "0.8"
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
chrono = "0.4"
url = "2.5"

# T54 FIX: Add Rayon and num_cpus for parallel executor
rayon = "1.10"
num_cpus = "1.16"
# T54.6 FIX: SmallVec for efficient PreparedTx access lists
smallvec = "1.13"

# T73.1: DashMap for STM executor's multi-version hashmap (optional, stm-exec feature)
dashmap = { version = "6.1", optional = true }

# T76.5: LRU cache for hybrid de-dup filter
lru = "0.12"

# Metrics / logging
prometheus = "0.13"
lazy_static = "1.5"
log = "0.4"
env_logger = "0.11"

# Crypto / hashing
chacha20poly1305 = "0.10"
base64 = "0.21"
uuid = { version = "1", features = ["v4"] }
seahash = "4"
blake3 = "1"

# HTTP clients
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
ureq = { version = "2.9", features = ["json", "tls"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# PQC dependency required for T36.2 runner startup (ML-DSA-44 keypair)
pqcrypto-mldsa = "0.1.2"

[features]
# Ship sensible defaults so header fields exist and observability works
default = ["pq44-runtime", "metrics", "eth-ssz", "checkpoints"]

# Forward ML-KEM to deps
mlkem = ["eezo-net/mlkem", "eezo-crypto/mlkem"]

# Forward PQ runtime features
pq44-runtime = [
  "eezo-crypto/pq44-runtime",
  "eezo-ledger/pq44-runtime",
]
slh-dsa = ["eezo-crypto/slh-dsa"]

# Observability / checkpoints / persistence / state-sync
metrics = ["eezo-ledger/metrics", "eezo-net/metrics"]
checkpoints = ["eezo-ledger/checkpoints"]
checkpoints-verify = ["eezo-ledger/checkpoints-verify"]
persistence = ["eezo-ledger/persistence"]
state-sync = ["eezo-ledger/state-sync"]

# ETH-SSZ v2 roots
eth-ssz = ["eezo-ledger/eth-ssz", "eezo-serde/eth-ssz"]

# Runtime modes
devnet = ["metrics", "pq44-runtime", "kemtls-resume", "mlkem"]
testing = ["pq44-runtime"]

# HTTP surface for state-sync endpoints
state-sync-http = []

# T77.SAFE-2: Dev-unsafe mode gate. Must be explicitly enabled to allow:
# - skip-sig-verify feature (bypasses all signature checks)
# - EEZO_DEV_ALLOW_UNSIGNED_TX env var (allows unsigned transactions)
# NEVER use in production, testnet, or mainnet builds.
# Use only for local development benchmarks.
dev-unsafe = ["eezo-ledger/dev-unsafe", "eezo-crypto/dev-unsafe"]

# Dev-only toggles
dev-tools = []

# Keep adapter/testing cfgs “known”
consensus-core-adapter = []
consensus-core-testing = []

# T37.1: enable KEMTLS resumption paths in node
kemtls-resume = ["eezo-net/kemtls-resume"]

# T41.4: opt-in strict mode for QC sidecar v2 (enforce at cutover+1)
qc-sidecar-v2-enforce = []

# T71.0/T71.1: GPU hashing adapter (safe, optional GPU-accelerated hashing)
# T71.1: Now wires to the real eezo-prover GPU backend when enabled.
# When this feature is on, the node uses eezo-prover's GpuBlake3Context for
# GPU-accelerated BLAKE3 hashing. Node env: EEZO_NODE_GPU_HASH=off|shadow|prefer
# Note: We also enable eezo-prover/stark-air to satisfy prover_loop.rs dependencies.
gpu-hash = ["eezo-prover", "eezo-prover/gpu-hash", "eezo-prover/stark-air"]

# T73.1: Block-STM executor scaffolding (optional, for parallel tx execution)
# Enables mvhashmap.rs and stm.rs modules in crates/node/src/executor/
# Note: This only adds the modules; wiring into consensus_runner is T73.3+
stm-exec = ["dashmap"]

# T75.0: DAG consensus shadow mode (optional, for observability without changing behavior)
# When enabled, node can run consensus-dag in shadow mode alongside Hotstuff/STM.
# Shadow DAG receives committed block info and orders shadow batches for metrics/logging.
# Env: EEZO_DAG_CONSENSUS_MODE=off|shadow (default: off)
dag-consensus = ["consensus-dag", "consensus-dag/metrics"]

# T78.7: HotStuff shadow checker feature gate.
# When enabled, the shadow HotStuff checker is available in dag-primary mode.
# When disabled, HotStuff shadow code is not compiled, reducing binary size.
# Only effective in dag-primary mode. Has no effect in other consensus modes.
# Requires dag-consensus feature for the shadow checker to function.
hotstuff-shadow = ["dag-consensus"]

# T78.7: Devnet-safe build profile.
# When enabled:
# - Default consensus mode is dag-primary (when EEZO_CONSENSUS_MODE is unset)
# - DAG ordering is enabled by default (effective EEZO_DAG_ORDERING_ENABLED=1)
# - Does NOT include dev-unsafe (no unsigned tx support)
# - HotStuff runs as shadow only (when hotstuff-shadow is also enabled)
# Use for "official devnet" deployments. For local benchmarks, use dev-unsafe instead.
devnet-safe = ["pq44-runtime", "metrics", "checkpoints", "dag-consensus", "stm-exec"]

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
pqcrypto-traits = { version = "0.3.5", package = "pqcrypto-traits" }
hyper = "0.14"